--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>======= Hello NUTRAPP Users =======</title>
+    <title>======= Hello NUTRAPP OK Users =======</title>
 </head>
 <body>
-<div> Test</div>
+<div> Test OK GOOGLE</div>
 </body>
 </html>
