--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <title>======= Hello NUTRAPP OK Users =======</title>
 </head>
 <body>
-<div> Test OK GOOGLE</div>
+<div> Test OK GOOGLE Jim</div>
 </body>
 </html>
